--- a/A7/index.html
+++ b/A7/index.html
@@ -103,7 +103,7 @@
             </div>
             <div class="content">
                 <div class="currencyCov">
-                    <button class="switchCur selected" onclick="payment.convertPricesTo(event,'\u{020B9}',1)">INR</button>
+                    <button class="switchCur selected" onclick="payment.convertPricesTo(event)">INR</button>
                     <button class="switchCur" onclick="payment.convertPricesTo(event,'\u{00024}',0.014)">DOLLAR</button>
                     <button class="switchCur" onclick="payment.convertPricesTo(event,'\u{000A5}',1.50)">YEN</button>
                 </div>
